# mpc-experiments

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  geninput.py  test.cpp
.devcontainer/: Dockerfile  devcontainer.json
docker/prod/: Dockerfile  docker-compose.yml
emp/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml  geninput.py  requirements.txt
emp/.devcontainer/: Dockerfile  devcontainer.json
emp/cmake/: base.cmake
emp/scripts/: benchmark.sh  geninput.py  run-compose.sh  run-local.sh  run.sh
emp/src/: CMakeLists.txt  hist2d.cpp  linreg.cpp  millionaire.cpp  utils.hpp  xtabs.cpp
emp/src/emp/emp-tool/: CMakeLists.txt
emp/src/examples/: hist2d.cpp  linreg.cpp  millionaire.cpp  xtabs.cpp
emp/src/old/: hist2d_old.cpp  xtabs_old.cpp
emp/src/utils/: timing_utils.hpp
mp-spdz/: .gitignore  Dockerfile  README.md  compile.sh  compose.yaml  install.sh  requirements.txt  run.sh  setup_data.sh
mp-spdz/.devcontainer/: Dockerfile  devcontainer.json
mp-spdz/mpc/: tutorial.py
mp-spdz/scripts/: bench_run.sh  compile.sh  csv2spdz.py  docker-build.sh  gen_input.py  geninput.py  install.sh  iprep.sh  setup_data.sh
mp-spdz/src/: hist2d.py  iprep.py  linreg.py  millionaire.py  millionaire_gc.py  s.py  single_and.py  test.py  tutorial.py  xtabs.py  xtabs_gc.py
src/: CMakeLists.txt  Pair.h  groupby.cpp  hist2d.cpp  histogram.cpp  innerprod.cpp  linreg.cpp  millionaire.cpp  xtabs.cpp
